<?xml version="1.0"?>

<resources>
    <string name="app_name">鲁科智能检测系统</string>
    <string-array name="model_array">
        <item>211223</item>
        <item>5s</item>
    </string-array>
    <string-array name="cpugpu_array">
        <item>CPU</item>
        <item>GPU</item>
    </string-array>

    <string name="title_tips">提示</string>
    <string name="title_tips_save">保存</string>
    <string name="title_tips_up">提交</string>
    <string name="title_tips_confim">确定</string>
    <string name="title_tips_cancel">取消</string>
    <string name="QR_code">二维码扫描</string>
    <string name="viewfinderview_status_text1">将二维码放入取景框内</string>
    <string name="handler_data">业务处理中</string>
    <string name="updata_found">上传方式</string>
    <string name="updata_local">本地存储</string>
    <string name="updata_socket">实时上传</string>
    <string name="line_discern">在线检测</string>
    <string name="robot">机器人</string>
    <string name="setting">参数设置</string>
    <string name="save_success">保存成功</string>
    <string name="save_faile">保存失败</string>
    <string name="length_video">Length:</string>
    <string name="gravando">Recording...</string>
    <string name="stop">Stop</string>
    <string name="delet">删除</string>
    <string name="action_settings">Settings</string>
    <string name="rtc_success">转推成功</string>
    <string name="rtc_faile">转推失败</string>

    <string name="connect_success">连接成功</string>
    <string name="connect_faile">连接失败</string>


    <string name="ce_up">磁轭抬起</string>
    <string name="ce_down">磁轭落下</string>

    <string name="light_black">黑光模式</string>
    <string name="light_wither">白光模式</string>

    <string name="search_light_open">探照灯开启</string>
    <string name="search_light_close">探照灯关闭</string>

    <string name="battery_open">电池阀开启</string>
    <string name="battery_close">电池阀关闭</string>

    <string name="ch_control_open">开启磁化</string>
    <string name="ch_control_close">关闭磁化</string>


    <string name="dialog_close">请检查设备是否正常运行</string>
    <string name="device_connect">设备连接中...</string>
    <string name="dialog_loding">数据加载中...</string>
    <string name="device_setting">设置中...</string>
    <string name="net_error">java.net.ConnectException: Failed to connect</string>
    <string name="conniction">连接</string>
    <string name="discon">断开</string>
    <string name="change_net">请检查网络</string>
    <string name="bast_version">已是最新版本</string>
    <string name="url_null">下载连接为空</string>

    <string name="device_sure">设备确认</string>
    <string name="send_success">发送成功</string>
    <string name="send_faile">发送失败</string>
    <string name="receive_faile">接收数据错误</string>
    <string name="connect_colse">连接断开</string>
    <string name="image_list">图片列表</string>
    <string name="video_list">视频列表</string>
    <string name="version_check">版本检测</string>
    <string name="current_version">当前版本</string>
    <string name="contact_comp">联系我们</string>
    <string name="in_project">进入程序</string>
    <string name="close_project">退出程序</string>
    <string name="have_new_version">存在新版本</string>
    <string name="work_temp">请链接网络</string>
    <string name="btn_sure">确定</string>
    <string name="btn_cancel">取消</string>

</resources>