<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:background="@color/theme_back_color">

    <include layout="@layout/dialog_item_header" />

    <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:background="@drawable/linelayout_backthemecolor_radion"
            android:gravity="top|left"
            android:hint="@string/work_temp"
            android:paddingLeft="10dp"
            android:textSize="14dp"
            android:textColor="@color/white"
            android:inputType="numberDecimal"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="0dp">
        <com.example.lksynthesizeapp.View.BaseButton
                android:id="@+id/btnCancel"
                style="@style/BaseButton"
                app:bg_color="@color/theme_color"
                app:bg_corner="5dp"
                android:text="@string/btn_cancel"
                android:layout_marginRight="20dp"/>
        <com.example.lksynthesizeapp.View.BaseButton
                android:id="@+id/btnSure"
                style="@style/BaseButton"
                app:bg_color="@color/theme_color"
                app:bg_corner="5dp"
                android:text="@string/btn_sure" />
    </LinearLayout>
</LinearLayout>