<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
        android:background="@color/theme_back_color">

    <include layout="@layout/dialog_item_header"/>

    <TextView
        android:id="@+id/title"
        android:text="@string/title_tips"
            android:visibility="gone"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:gravity="center|left"
        android:id="@+id/content"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginTop="13dp"
            android:paddingLeft="20dp"
        android:lineSpacingMultiplier="1.3"
        android:layout_width="match_parent"
        android:layout_height="55dp" />

    <ImageView
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            android:id="@+id/no"
            android:text="@string/title_tips_cancel"
            android:textColor="@color/theme_color"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="match_parent" />
        <ImageView
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/divider"/>
        <TextView
            android:id="@+id/yes"
            android:text="@string/title_tips_confim"
            android:textColor="@color/theme_color"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>